--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,17 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -111,6 +122,7 @@
             <version>5.9.2</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
 
